--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,42 @@
         android:text="文本"
         android:layout_below="@+id/lo"
         />
+
+    <Button
+    android:id="@+id/btv"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="按钮"
+    android:layout_below="@+id/tv"
+    />
+
+    <Button
+        android:id="@+id/btet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="文本框"
+        android:layout_below="@+id/btv"
+        />
+    <Button
+        android:id="@+id/btrb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="单选"
+        android:layout_below="@+id/btet"
+        />
+    <Button
+        android:id="@+id/btcb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="复选"
+        android:layout_below="@+id/btrb"
+        />
+
+    <Button
+        android:id="@+id/btiv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="图片"
+        android:layout_below="@+id/btcb"
+        />
 </RelativeLayout>
