--- a/app/src/main/res/layout/activity_relative_layout2.xml
+++ b/app/src/main/res/layout/activity_relative_layout2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".layout.RelativeLayoutActivity2">
+    tools:context=".RelativeLayoutActivity2">
 
     <View
         android:id="@+id/v1"
